--- a/Atividade_automatos.ipynb
+++ b/Atividade_automatos.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "K5bJc2JTrNnb",
-        "outputId": "bdd69800-123c-4ee7-8ba6-6f341a48d39f"
+        "outputId": "402280ee-2644-4eab-a9d3-d1ab0340150a"
       },
       "outputs": [
         {
@@ -30,7 +30,7 @@
           "name": "stdout",
           "text": [
             "Validador de E-mails\n",
-            "Digite um e-mail: biafreirenunes2015@gmail.com\n",
+            "Digite um e-mail: teste@gmail.com\n",
             "✅ E-mail válido!\n"
           ]
         }
